bugfix need 100% width on small view cards

--- a/__site_scss/_card.scss
+++ b/__site_scss/_card.scss
@@ -9,6 +9,7 @@
   color: var(--clr-font-primary);
   border-radius: 2px;
   margin-top: 70px;
+  width: 100%;
 
   @include mq(medium) {
     padding: 5rem;
